--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -31,7 +31,6 @@
 <meta
   name="keywords"
   content="technology, workshop, data visualization, Python, data science, slides" />
-<link rel="manifest" href="/favicon/site.webmanifest" />
 <meta
   property="og:url"
   content="https://stefaniemolin.com/pandas-workshop/" />
@@ -55,7 +54,32 @@
 <meta property="og:image:height" content="1599" />
 
 <title>Introduction to Data Analysis Using Pandas workshop slides | Stefanie Molin</title>
-<link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico"><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<link rel="manifest" href="/favicon/site.webmanifest" />
+<link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico">
+<link
+    rel="apple-touch-icon"
+    sizes="180x180"
+    href="/favicon/apple-touch-icon.png" />
+<link
+    rel="icon"
+    type="image/png"
+    sizes="32x32"
+    href="/favicon/favicon-32x32.png" />
+<link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="/favicon/favicon-16x16.png" />
+<link
+    rel="icon"
+    type="image/png"
+    sizes="192x192"
+    href="/favicon/android-chrome-192x192.png" />
+<link
+    rel="icon"
+    type="image/png"
+    sizes="512x512"
+    href="/favicon/android-chrome-512x512.png" /><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 <!-- General and theme style sheets -->
 <link rel="stylesheet" href="https://unpkg.com/reveal.js@4.0.2/dist/reveal.css">
