Add another badge to header

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -15272,6 +15272,11 @@ div.jp-OutputPrompt {
 <div class="footer" style="padding: 4px; font-size: 22px;">
     Introduction to Data Analysis Using Pandas &ndash; Stefanie Molin
     <div style="float: right; margin-top: -18px;">
+        <a href="https://stefaniemolin.com/say-thanks/"
+          style="z-index: 1;" target="_blank">
+          <img alt="Ways to show appreciation for this content."
+                style="max-width: 100%; margin: 20px 0 0 0;" src="https://img.shields.io/badge/liked_this%3F-say_thanks-gray?logoColor=yellow&color=blue">
+        </a>
         <a href="https://codespaces.new/stefmolin/pandas-workshop"
             style="z-index: 1;" target="_blank" rel="noopener noreferrer"
         >
