--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -13027,7 +13027,7 @@ Name: year, dtype: float64</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>Now, we can work on reshaping it into two columns the date and the traveler throughput from 2019 through 2021.</p>
+<p>Now, we can work on reshaping it into two columns: the date and the traveler throughput from 2019 through 2021.</p>
 </div>
 </div>
 </div>
