--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -14550,7 +14550,7 @@ Name: year, dtype: float64</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput celltag_id_numpy-where" data-mime-type="text/markdown">
-<p>Next, we group together Christmas Eve and Christmas Day, likewise for New Year's Eve and New Year's Day, and create the pivot table:</p>
+<p>Next, we group together Christmas Eve and Christmas Day, likewise for New Year's Eve and New Year's Day (handling for the change in year), and create the pivot table:</p>
 </div>
 </div>
 </div>
@@ -14565,6 +14565,9 @@ Name: year, dtype: float64</pre>
 <div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 
 <span class="n">tsa_melted_holiday_travel</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span>
+    <span class="n">year</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">where</span><span class="p">(</span>
+        <span class="n">x</span><span class="o">.</span><span class="n">holiday</span> <span class="o">==</span> <span class="s2">"New Year's Day"</span><span class="p">,</span> <span class="n">pd</span><span class="o">.</span><span class="n">to_numeric</span><span class="p">(</span><span class="n">x</span><span class="o">.</span><span class="n">year</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span><span class="p">,</span> <span class="n">x</span><span class="o">.</span><span class="n">year</span>
+    <span class="p">)</span><span class="o">.</span><span class="n">astype</span><span class="p">(</span><span class="nb">str</span><span class="p">),</span>
     <span class="n">holiday</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">where</span><span class="p">(</span>
         <span class="n">x</span><span class="o">.</span><span class="n">holiday</span><span class="o">.</span><span class="n">str</span><span class="o">.</span><span class="n">contains</span><span class="p">(</span><span class="s1">'Christmas|New Year'</span><span class="p">,</span> <span class="n">regex</span><span class="o">=</span><span class="kc">True</span><span class="p">),</span> 
         <span class="n">x</span><span class="o">.</span><span class="n">holiday</span><span class="o">.</span><span class="n">str</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">'Day|Eve'</span><span class="p">,</span> <span class="s1">''</span><span class="p">,</span> <span class="n">regex</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span><span class="o">.</span><span class="n">str</span><span class="o">.</span><span class="n">strip</span><span class="p">(),</span> 
@@ -14626,14 +14629,24 @@ Name: year, dtype: float64</pre>
 </thead>
 <tbody>
 <tr>
+<th>2018</th>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>4,471,501</td>
+<td>NaN</td>
+<td>4,471,501</td>
+</tr>
+<tr>
 <th>2019</th>
 <td>11,524,228</td>
 <td>9,414,228</td>
 <td>8,314,811</td>
 <td>9,720,691</td>
-<td>11,006,965</td>
+<td>11,025,852</td>
 <td>9,090,478</td>
-<td>59,071,401</td>
+<td>59,090,288</td>
 </tr>
 <tr>
 <th>2020</th>
@@ -14641,19 +14654,9 @@ Name: year, dtype: float64</pre>
 <td>2,682,541</td>
 <td>2,993,653</td>
 <td>1,126,253</td>
-<td>7,547,837</td>
+<td>5,056,320</td>
 <td>3,364,358</td>
-<td>22,489,694</td>
-</tr>
-<tr>
-<th>2021</th>
-<td>NaN</td>
-<td>NaN</td>
-<td>NaN</td>
-<td>NaN</td>
-<td>1,998,871</td>
-<td>NaN</td>
-<td>1,998,871</td>
+<td>19,998,177</td>
 </tr>
 <tr>
 <th>Total</th>
