--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -13097,49 +13097,49 @@ Name: year, dtype: float64</pre>
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[22]:</div>
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
 <style type="text/css">
-#T_fff20_row0_col1, #T_fff20_row1_col1 {
+#T_091ff_row0_col1, #T_091ff_row1_col1 {
   background-color: pink;
 }
-#T_fff20_row0_col2, #T_fff20_row1_col2 {
+#T_091ff_row0_col2, #T_091ff_row1_col2 {
   background-color: skyblue;
 }
-#T_fff20_row0_col3, #T_fff20_row1_col3 {
+#T_091ff_row0_col3, #T_091ff_row1_col3 {
   background-color: lightgreen;
 }
-#T_fff20_level0_col1 {
+#T_091ff_level0_col1 {
   background-color: pink;
 }
-#T_fff20_level0_col2 {
+#T_091ff_level0_col2 {
   background-color: skyblue;
 }
-#T_fff20_level0_col3 {
+#T_091ff_level0_col3 {
   background-color: lightgreen;
 }
 </style>
-<table id="T_fff20">
+<table id="T_091ff">
 <thead>
 <tr>
 <th class="blank level0"> </th>
-<th class="col_heading level0 col0" id="T_fff20_level0_col0">date</th>
-<th class="col_heading level0 col1" id="T_fff20_level0_col1">2021</th>
-<th class="col_heading level0 col2" id="T_fff20_level0_col2">2020</th>
-<th class="col_heading level0 col3" id="T_fff20_level0_col3">2019</th>
+<th class="col_heading level0 col0" id="T_091ff_level0_col0">date</th>
+<th class="col_heading level0 col1" id="T_091ff_level0_col1">2021</th>
+<th class="col_heading level0 col2" id="T_091ff_level0_col2">2020</th>
+<th class="col_heading level0 col3" id="T_091ff_level0_col3">2019</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<th class="row_heading level0 row0" id="T_fff20_level0_row0">0</th>
-<td class="data row0 col0" id="T_fff20_row0_col0">2021-05-14 00:00:00</td>
-<td class="data row0 col1" id="T_fff20_row0_col1">1716561.000000</td>
-<td class="data row0 col2" id="T_fff20_row0_col2">250467</td>
-<td class="data row0 col3" id="T_fff20_row0_col3">2664549</td>
+<th class="row_heading level0 row0" id="T_091ff_level0_row0">0</th>
+<td class="data row0 col0" id="T_091ff_row0_col0">2021-05-14 00:00:00</td>
+<td class="data row0 col1" id="T_091ff_row0_col1">1716561.000000</td>
+<td class="data row0 col2" id="T_091ff_row0_col2">250467</td>
+<td class="data row0 col3" id="T_091ff_row0_col3">2664549</td>
 </tr>
 <tr>
-<th class="row_heading level0 row1" id="T_fff20_level0_row1">1</th>
-<td class="data row1 col0" id="T_fff20_row1_col0">2021-05-13 00:00:00</td>
-<td class="data row1 col1" id="T_fff20_row1_col1">1743515.000000</td>
-<td class="data row1 col2" id="T_fff20_row1_col2">234928</td>
-<td class="data row1 col3" id="T_fff20_row1_col3">2611324</td>
+<th class="row_heading level0 row1" id="T_091ff_level0_row1">1</th>
+<td class="data row1 col0" id="T_091ff_row1_col0">2021-05-13 00:00:00</td>
+<td class="data row1 col1" id="T_091ff_row1_col1">1743515.000000</td>
+<td class="data row1 col2" id="T_091ff_row1_col2">234928</td>
+<td class="data row1 col3" id="T_091ff_row1_col3">2611324</td>
 </tr>
 </tbody>
 </table>
@@ -13182,61 +13182,61 @@ Name: year, dtype: float64</pre>
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[23]:</div>
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
 <style type="text/css">
-#T_5ca79_row0_col1, #T_5ca79_row0_col2, #T_5ca79_row1_col1, #T_5ca79_row1_col2 {
+#T_30693_row0_col1, #T_30693_row0_col2, #T_30693_row1_col1, #T_30693_row1_col2 {
   background-color: pink;
 }
-#T_5ca79_row2_col1, #T_5ca79_row2_col2, #T_5ca79_row3_col1, #T_5ca79_row3_col2 {
+#T_30693_row2_col1, #T_30693_row2_col2, #T_30693_row3_col1, #T_30693_row3_col2 {
   background-color: skyblue;
 }
-#T_5ca79_row4_col1, #T_5ca79_row4_col2, #T_5ca79_row5_col1, #T_5ca79_row5_col2 {
+#T_30693_row4_col1, #T_30693_row4_col2, #T_30693_row5_col1, #T_30693_row5_col2 {
   background-color: lightgreen;
 }
 </style>
-<table id="T_5ca79">
+<table id="T_30693">
 <thead>
 <tr>
 <th class="blank level0"> </th>
-<th class="col_heading level0 col0" id="T_5ca79_level0_col0">date</th>
-<th class="col_heading level0 col1" id="T_5ca79_level0_col1">year</th>
-<th class="col_heading level0 col2" id="T_5ca79_level0_col2">travelers</th>
+<th class="col_heading level0 col0" id="T_30693_level0_col0">date</th>
+<th class="col_heading level0 col1" id="T_30693_level0_col1">year</th>
+<th class="col_heading level0 col2" id="T_30693_level0_col2">travelers</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<th class="row_heading level0 row0" id="T_5ca79_level0_row0">0</th>
-<td class="data row0 col0" id="T_5ca79_row0_col0">2021-05-14 00:00:00</td>
-<td class="data row0 col1" id="T_5ca79_row0_col1">2021</td>
-<td class="data row0 col2" id="T_5ca79_row0_col2">1716561.000000</td>
+<th class="row_heading level0 row0" id="T_30693_level0_row0">0</th>
+<td class="data row0 col0" id="T_30693_row0_col0">2021-05-14 00:00:00</td>
+<td class="data row0 col1" id="T_30693_row0_col1">2021</td>
+<td class="data row0 col2" id="T_30693_row0_col2">1716561.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row1" id="T_5ca79_level0_row1">1</th>
-<td class="data row1 col0" id="T_5ca79_row1_col0">2021-05-13 00:00:00</td>
-<td class="data row1 col1" id="T_5ca79_row1_col1">2021</td>
-<td class="data row1 col2" id="T_5ca79_row1_col2">1743515.000000</td>
+<th class="row_heading level0 row1" id="T_30693_level0_row1">1</th>
+<td class="data row1 col0" id="T_30693_row1_col0">2021-05-13 00:00:00</td>
+<td class="data row1 col1" id="T_30693_row1_col1">2021</td>
+<td class="data row1 col2" id="T_30693_row1_col2">1743515.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row2" id="T_5ca79_level0_row2">2</th>
-<td class="data row2 col0" id="T_5ca79_row2_col0">2020-05-14 00:00:00</td>
-<td class="data row2 col1" id="T_5ca79_row2_col1">2020</td>
-<td class="data row2 col2" id="T_5ca79_row2_col2">250467.000000</td>
+<th class="row_heading level0 row2" id="T_30693_level0_row2">2</th>
+<td class="data row2 col0" id="T_30693_row2_col0">2020-05-14 00:00:00</td>
+<td class="data row2 col1" id="T_30693_row2_col1">2020</td>
+<td class="data row2 col2" id="T_30693_row2_col2">250467.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row3" id="T_5ca79_level0_row3">3</th>
-<td class="data row3 col0" id="T_5ca79_row3_col0">2020-05-13 00:00:00</td>
-<td class="data row3 col1" id="T_5ca79_row3_col1">2020</td>
-<td class="data row3 col2" id="T_5ca79_row3_col2">234928.000000</td>
+<th class="row_heading level0 row3" id="T_30693_level0_row3">3</th>
+<td class="data row3 col0" id="T_30693_row3_col0">2020-05-13 00:00:00</td>
+<td class="data row3 col1" id="T_30693_row3_col1">2020</td>
+<td class="data row3 col2" id="T_30693_row3_col2">234928.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row4" id="T_5ca79_level0_row4">4</th>
-<td class="data row4 col0" id="T_5ca79_row4_col0">2019-05-14 00:00:00</td>
-<td class="data row4 col1" id="T_5ca79_row4_col1">2019</td>
-<td class="data row4 col2" id="T_5ca79_row4_col2">2664549.000000</td>
+<th class="row_heading level0 row4" id="T_30693_level0_row4">4</th>
+<td class="data row4 col0" id="T_30693_row4_col0">2019-05-14 00:00:00</td>
+<td class="data row4 col1" id="T_30693_row4_col1">2019</td>
+<td class="data row4 col2" id="T_30693_row4_col2">2664549.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row5" id="T_5ca79_level0_row5">5</th>
-<td class="data row5 col0" id="T_5ca79_row5_col0">2019-05-13 00:00:00</td>
-<td class="data row5 col1" id="T_5ca79_row5_col1">2019</td>
-<td class="data row5 col2" id="T_5ca79_row5_col2">2611324.000000</td>
+<th class="row_heading level0 row5" id="T_30693_level0_row5">5</th>
+<td class="data row5 col0" id="T_30693_row5_col0">2019-05-13 00:00:00</td>
+<td class="data row5 col1" id="T_30693_row5_col1">2019</td>
+<td class="data row5 col2" id="T_30693_row5_col2">2611324.000000</td>
 </tr>
 </tbody>
 </table>
@@ -14308,7 +14308,7 @@ Name: year, dtype: float64</pre>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">tsa_melted_holiday_travel</span><span class="o">.</span><span class="n">pivot_table</span><span class="p">(</span>
-    <span class="n">index</span><span class="o">=</span><span class="s1">'year'</span><span class="p">,</span> <span class="n">columns</span><span class="o">=</span><span class="s1">'holiday'</span><span class="p">,</span> 
+    <span class="n">index</span><span class="o">=</span><span class="s1">'year'</span><span class="p">,</span> <span class="n">columns</span><span class="o">=</span><span class="s1">'holiday'</span><span class="p">,</span> <span class="n">sort</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
     <span class="n">values</span><span class="o">=</span><span class="s1">'travelers'</span><span class="p">,</span> <span class="n">aggfunc</span><span class="o">=</span><span class="s1">'sum'</span>
 <span class="p">)</span>
 </pre></div>
@@ -14341,14 +14341,14 @@ Name: year, dtype: float64</pre>
 <thead>
 <tr style="text-align: right;">
 <th>holiday</th>
-<th>Christmas Day</th>
-<th>Christmas Eve</th>
+<th>New Year's Day</th>
+<th>Memorial Day</th>
 <th>July 4th</th>
 <th>Labor Day</th>
-<th>Memorial Day</th>
-<th>New Year's Day</th>
-<th>New Year's Eve</th>
 <th>Thanksgiving</th>
+<th>Christmas Eve</th>
+<th>Christmas Day</th>
+<th>New Year's Eve</th>
 </tr>
 <tr>
 <th>year</th>
@@ -14365,34 +14365,34 @@ Name: year, dtype: float64</pre>
 <tbody>
 <tr>
 <th>2019</th>
-<td>5053366.0</td>
-<td>6470862.0</td>
+<td>4471501.0</td>
+<td>9720691.0</td>
 <td>9414228.0</td>
 <td>8314811.0</td>
-<td>9720691.0</td>
-<td>4471501.0</td>
-<td>6535464.0</td>
 <td>9090478.0</td>
+<td>6470862.0</td>
+<td>5053366.0</td>
+<td>6535464.0</td>
 </tr>
 <tr>
 <th>2020</th>
-<td>1745242.0</td>
-<td>3029810.0</td>
+<td>4490388.0</td>
+<td>1126253.0</td>
 <td>2682541.0</td>
 <td>2993653.0</td>
-<td>1126253.0</td>
-<td>4490388.0</td>
-<td>3057449.0</td>
 <td>3364358.0</td>
+<td>3029810.0</td>
+<td>1745242.0</td>
+<td>3057449.0</td>
 </tr>
 <tr>
 <th>2021</th>
-<td>NaN</td>
-<td>NaN</td>
-<td>NaN</td>
-<td>NaN</td>
-<td>NaN</td>
 <td>1998871.0</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
 <td>NaN</td>
 <td>NaN</td>
 </tr>
@@ -14423,7 +14423,7 @@ Name: year, dtype: float64</pre>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="n">tsa_melted_holiday_travel</span><span class="o">.</span><span class="n">pivot_table</span><span class="p">(</span>
-    <span class="n">index</span><span class="o">=</span><span class="s1">'year'</span><span class="p">,</span> <span class="n">columns</span><span class="o">=</span><span class="s1">'holiday'</span><span class="p">,</span> 
+    <span class="n">index</span><span class="o">=</span><span class="s1">'year'</span><span class="p">,</span> <span class="n">columns</span><span class="o">=</span><span class="s1">'holiday'</span><span class="p">,</span> <span class="n">sort</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
     <span class="n">values</span><span class="o">=</span><span class="s1">'travelers'</span><span class="p">,</span> <span class="n">aggfunc</span><span class="o">=</span><span class="s1">'sum'</span>
 <span class="p">)</span><span class="o">.</span><span class="n">pct_change</span><span class="p">(</span><span class="n">fill_method</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
 </pre></div>
@@ -14456,14 +14456,14 @@ Name: year, dtype: float64</pre>
 <thead>
 <tr style="text-align: right;">
 <th>holiday</th>
-<th>Christmas Day</th>
-<th>Christmas Eve</th>
+<th>New Year's Day</th>
+<th>Memorial Day</th>
 <th>July 4th</th>
 <th>Labor Day</th>
-<th>Memorial Day</th>
-<th>New Year's Day</th>
-<th>New Year's Eve</th>
 <th>Thanksgiving</th>
+<th>Christmas Eve</th>
+<th>Christmas Day</th>
+<th>New Year's Eve</th>
 </tr>
 <tr>
 <th>year</th>
@@ -14491,23 +14491,23 @@ Name: year, dtype: float64</pre>
 </tr>
 <tr>
 <th>2020</th>
-<td>-0.654638</td>
-<td>-0.531776</td>
+<td>0.004224</td>
+<td>-0.884139</td>
 <td>-0.715055</td>
 <td>-0.639961</td>
-<td>-0.884139</td>
-<td>0.004224</td>
-<td>-0.532176</td>
 <td>-0.629903</td>
+<td>-0.531776</td>
+<td>-0.654638</td>
+<td>-0.532176</td>
 </tr>
 <tr>
 <th>2021</th>
-<td>NaN</td>
-<td>NaN</td>
-<td>NaN</td>
-<td>NaN</td>
-<td>NaN</td>
 <td>-0.554856</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
+<td>NaN</td>
 <td>NaN</td>
 <td>NaN</td>
 </tr>
@@ -14564,7 +14564,7 @@ Name: year, dtype: float64</pre>
 <div class="cm-editor cm-s-jupyter">
 <div class="highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 
-<span class="n">tsa_melted_holiday_travel</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span>
+<span class="n">pivot_table</span> <span class="o">=</span> <span class="n">tsa_melted_holiday_travel</span><span class="o">.</span><span class="n">assign</span><span class="p">(</span>
     <span class="n">year</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">where</span><span class="p">(</span>
         <span class="n">x</span><span class="o">.</span><span class="n">holiday</span> <span class="o">==</span> <span class="s2">"New Year's Day"</span><span class="p">,</span> <span class="n">pd</span><span class="o">.</span><span class="n">to_numeric</span><span class="p">(</span><span class="n">x</span><span class="o">.</span><span class="n">year</span><span class="p">)</span> <span class="o">-</span> <span class="mi">1</span><span class="p">,</span> <span class="n">x</span><span class="o">.</span><span class="n">year</span>
     <span class="p">)</span><span class="o">.</span><span class="n">astype</span><span class="p">(</span><span class="nb">str</span><span class="p">),</span>
@@ -14574,10 +14574,13 @@ Name: year, dtype: float64</pre>
         <span class="n">x</span><span class="o">.</span><span class="n">holiday</span>
     <span class="p">)</span>
 <span class="p">)</span><span class="o">.</span><span class="n">pivot_table</span><span class="p">(</span>
-    <span class="n">index</span><span class="o">=</span><span class="s1">'year'</span><span class="p">,</span> <span class="n">columns</span><span class="o">=</span><span class="s1">'holiday'</span><span class="p">,</span> 
+    <span class="n">index</span><span class="o">=</span><span class="s1">'year'</span><span class="p">,</span> <span class="n">columns</span><span class="o">=</span><span class="s1">'holiday'</span><span class="p">,</span> <span class="n">sort</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span>
     <span class="n">values</span><span class="o">=</span><span class="s1">'travelers'</span><span class="p">,</span> <span class="n">aggfunc</span><span class="o">=</span><span class="s1">'sum'</span><span class="p">,</span> 
     <span class="n">margins</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">margins_name</span><span class="o">=</span><span class="s1">'Total'</span>
 <span class="p">)</span>
+<span class="c1"># reorder columns by order in the year</span>
+<span class="n">pivot_table</span><span class="o">.</span><span class="n">insert</span><span class="p">(</span><span class="mi">5</span><span class="p">,</span> <span class="s2">"New Year's"</span><span class="p">,</span> <span class="n">pivot_table</span><span class="o">.</span><span class="n">pop</span><span class="p">(</span><span class="s2">"New Year's"</span><span class="p">)</span><span class="o">.</span><span class="n">tolist</span><span class="p">())</span>
+<span class="n">pivot_table</span>
 </pre></div>
 </div>
 </div>
@@ -14608,12 +14611,12 @@ Name: year, dtype: float64</pre>
 <thead>
 <tr style="text-align: right;">
 <th>holiday</th>
-<th>Christmas</th>
+<th>Memorial Day</th>
 <th>July 4th</th>
 <th>Labor Day</th>
-<th>Memorial Day</th>
-<th>New Year's</th>
 <th>Thanksgiving</th>
+<th>Christmas</th>
+<th>New Year's</th>
 <th>Total</th>
 </tr>
 <tr>
@@ -14634,38 +14637,38 @@ Name: year, dtype: float64</pre>
 <td>NaN</td>
 <td>NaN</td>
 <td>NaN</td>
-<td>4,471,501</td>
 <td>NaN</td>
+<td>4,471,501</td>
 <td>4,471,501</td>
 </tr>
 <tr>
 <th>2019</th>
-<td>11,524,228</td>
+<td>9,720,691</td>
 <td>9,414,228</td>
 <td>8,314,811</td>
-<td>9,720,691</td>
-<td>11,025,852</td>
 <td>9,090,478</td>
+<td>11,524,228</td>
+<td>11,025,852</td>
 <td>59,090,288</td>
 </tr>
 <tr>
 <th>2020</th>
-<td>4,775,052</td>
+<td>1,126,253</td>
 <td>2,682,541</td>
 <td>2,993,653</td>
-<td>1,126,253</td>
-<td>5,056,320</td>
 <td>3,364,358</td>
+<td>4,775,052</td>
+<td>5,056,320</td>
 <td>19,998,177</td>
 </tr>
 <tr>
 <th>Total</th>
-<td>16,299,280</td>
+<td>10,846,944</td>
 <td>12,096,769</td>
 <td>11,308,464</td>
-<td>10,846,944</td>
-<td>20,553,673</td>
 <td>12,454,836</td>
+<td>16,299,280</td>
+<td>20,553,673</td>
 <td>83,559,966</td>
 </tr>
 </tbody>
