--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -13097,49 +13097,49 @@ Name: year, dtype: float64</pre>
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[22]:</div>
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
 <style type="text/css">
-#T_091ff_row0_col1, #T_091ff_row1_col1 {
+#T_aad10_row0_col1, #T_aad10_row1_col1 {
   background-color: pink;
 }
-#T_091ff_row0_col2, #T_091ff_row1_col2 {
+#T_aad10_row0_col2, #T_aad10_row1_col2 {
   background-color: skyblue;
 }
-#T_091ff_row0_col3, #T_091ff_row1_col3 {
+#T_aad10_row0_col3, #T_aad10_row1_col3 {
   background-color: lightgreen;
 }
-#T_091ff_level0_col1 {
+#T_aad10_level0_col1 {
   background-color: pink;
 }
-#T_091ff_level0_col2 {
+#T_aad10_level0_col2 {
   background-color: skyblue;
 }
-#T_091ff_level0_col3 {
+#T_aad10_level0_col3 {
   background-color: lightgreen;
 }
 </style>
-<table id="T_091ff">
+<table id="T_aad10">
 <thead>
 <tr>
 <th class="blank level0"> </th>
-<th class="col_heading level0 col0" id="T_091ff_level0_col0">date</th>
-<th class="col_heading level0 col1" id="T_091ff_level0_col1">2021</th>
-<th class="col_heading level0 col2" id="T_091ff_level0_col2">2020</th>
-<th class="col_heading level0 col3" id="T_091ff_level0_col3">2019</th>
+<th class="col_heading level0 col0" id="T_aad10_level0_col0">date</th>
+<th class="col_heading level0 col1" id="T_aad10_level0_col1">2021</th>
+<th class="col_heading level0 col2" id="T_aad10_level0_col2">2020</th>
+<th class="col_heading level0 col3" id="T_aad10_level0_col3">2019</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<th class="row_heading level0 row0" id="T_091ff_level0_row0">0</th>
-<td class="data row0 col0" id="T_091ff_row0_col0">2021-05-14 00:00:00</td>
-<td class="data row0 col1" id="T_091ff_row0_col1">1716561.000000</td>
-<td class="data row0 col2" id="T_091ff_row0_col2">250467</td>
-<td class="data row0 col3" id="T_091ff_row0_col3">2664549</td>
+<th class="row_heading level0 row0" id="T_aad10_level0_row0">0</th>
+<td class="data row0 col0" id="T_aad10_row0_col0">2021-05-14 00:00:00</td>
+<td class="data row0 col1" id="T_aad10_row0_col1">1716561.000000</td>
+<td class="data row0 col2" id="T_aad10_row0_col2">250467</td>
+<td class="data row0 col3" id="T_aad10_row0_col3">2664549</td>
 </tr>
 <tr>
-<th class="row_heading level0 row1" id="T_091ff_level0_row1">1</th>
-<td class="data row1 col0" id="T_091ff_row1_col0">2021-05-13 00:00:00</td>
-<td class="data row1 col1" id="T_091ff_row1_col1">1743515.000000</td>
-<td class="data row1 col2" id="T_091ff_row1_col2">234928</td>
-<td class="data row1 col3" id="T_091ff_row1_col3">2611324</td>
+<th class="row_heading level0 row1" id="T_aad10_level0_row1">1</th>
+<td class="data row1 col0" id="T_aad10_row1_col0">2021-05-13 00:00:00</td>
+<td class="data row1 col1" id="T_aad10_row1_col1">1743515.000000</td>
+<td class="data row1 col2" id="T_aad10_row1_col2">234928</td>
+<td class="data row1 col3" id="T_aad10_row1_col3">2611324</td>
 </tr>
 </tbody>
 </table>
@@ -13182,61 +13182,61 @@ Name: year, dtype: float64</pre>
 <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[23]:</div>
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/html" tabindex="0">
 <style type="text/css">
-#T_30693_row0_col1, #T_30693_row0_col2, #T_30693_row1_col1, #T_30693_row1_col2 {
+#T_51b61_row0_col1, #T_51b61_row0_col2, #T_51b61_row1_col1, #T_51b61_row1_col2 {
   background-color: pink;
 }
-#T_30693_row2_col1, #T_30693_row2_col2, #T_30693_row3_col1, #T_30693_row3_col2 {
+#T_51b61_row2_col1, #T_51b61_row2_col2, #T_51b61_row3_col1, #T_51b61_row3_col2 {
   background-color: skyblue;
 }
-#T_30693_row4_col1, #T_30693_row4_col2, #T_30693_row5_col1, #T_30693_row5_col2 {
+#T_51b61_row4_col1, #T_51b61_row4_col2, #T_51b61_row5_col1, #T_51b61_row5_col2 {
   background-color: lightgreen;
 }
 </style>
-<table id="T_30693">
+<table id="T_51b61">
 <thead>
 <tr>
 <th class="blank level0"> </th>
-<th class="col_heading level0 col0" id="T_30693_level0_col0">date</th>
-<th class="col_heading level0 col1" id="T_30693_level0_col1">year</th>
-<th class="col_heading level0 col2" id="T_30693_level0_col2">travelers</th>
+<th class="col_heading level0 col0" id="T_51b61_level0_col0">date</th>
+<th class="col_heading level0 col1" id="T_51b61_level0_col1">year</th>
+<th class="col_heading level0 col2" id="T_51b61_level0_col2">travelers</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<th class="row_heading level0 row0" id="T_30693_level0_row0">0</th>
-<td class="data row0 col0" id="T_30693_row0_col0">2021-05-14 00:00:00</td>
-<td class="data row0 col1" id="T_30693_row0_col1">2021</td>
-<td class="data row0 col2" id="T_30693_row0_col2">1716561.000000</td>
+<th class="row_heading level0 row0" id="T_51b61_level0_row0">0</th>
+<td class="data row0 col0" id="T_51b61_row0_col0">2021-05-14 00:00:00</td>
+<td class="data row0 col1" id="T_51b61_row0_col1">2021</td>
+<td class="data row0 col2" id="T_51b61_row0_col2">1716561.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row1" id="T_30693_level0_row1">1</th>
-<td class="data row1 col0" id="T_30693_row1_col0">2021-05-13 00:00:00</td>
-<td class="data row1 col1" id="T_30693_row1_col1">2021</td>
-<td class="data row1 col2" id="T_30693_row1_col2">1743515.000000</td>
+<th class="row_heading level0 row1" id="T_51b61_level0_row1">1</th>
+<td class="data row1 col0" id="T_51b61_row1_col0">2021-05-13 00:00:00</td>
+<td class="data row1 col1" id="T_51b61_row1_col1">2021</td>
+<td class="data row1 col2" id="T_51b61_row1_col2">1743515.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row2" id="T_30693_level0_row2">2</th>
-<td class="data row2 col0" id="T_30693_row2_col0">2020-05-14 00:00:00</td>
-<td class="data row2 col1" id="T_30693_row2_col1">2020</td>
-<td class="data row2 col2" id="T_30693_row2_col2">250467.000000</td>
+<th class="row_heading level0 row2" id="T_51b61_level0_row2">2</th>
+<td class="data row2 col0" id="T_51b61_row2_col0">2020-05-14 00:00:00</td>
+<td class="data row2 col1" id="T_51b61_row2_col1">2020</td>
+<td class="data row2 col2" id="T_51b61_row2_col2">250467.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row3" id="T_30693_level0_row3">3</th>
-<td class="data row3 col0" id="T_30693_row3_col0">2020-05-13 00:00:00</td>
-<td class="data row3 col1" id="T_30693_row3_col1">2020</td>
-<td class="data row3 col2" id="T_30693_row3_col2">234928.000000</td>
+<th class="row_heading level0 row3" id="T_51b61_level0_row3">3</th>
+<td class="data row3 col0" id="T_51b61_row3_col0">2020-05-13 00:00:00</td>
+<td class="data row3 col1" id="T_51b61_row3_col1">2020</td>
+<td class="data row3 col2" id="T_51b61_row3_col2">234928.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row4" id="T_30693_level0_row4">4</th>
-<td class="data row4 col0" id="T_30693_row4_col0">2019-05-14 00:00:00</td>
-<td class="data row4 col1" id="T_30693_row4_col1">2019</td>
-<td class="data row4 col2" id="T_30693_row4_col2">2664549.000000</td>
+<th class="row_heading level0 row4" id="T_51b61_level0_row4">4</th>
+<td class="data row4 col0" id="T_51b61_row4_col0">2019-05-14 00:00:00</td>
+<td class="data row4 col1" id="T_51b61_row4_col1">2019</td>
+<td class="data row4 col2" id="T_51b61_row4_col2">2664549.000000</td>
 </tr>
 <tr>
-<th class="row_heading level0 row5" id="T_30693_level0_row5">5</th>
-<td class="data row5 col0" id="T_30693_row5_col0">2019-05-13 00:00:00</td>
-<td class="data row5 col1" id="T_30693_row5_col1">2019</td>
-<td class="data row5 col2" id="T_30693_row5_col2">2611324.000000</td>
+<th class="row_heading level0 row5" id="T_51b61_level0_row5">5</th>
+<td class="data row5 col0" id="T_51b61_row5_col0">2019-05-13 00:00:00</td>
+<td class="data row5 col1" id="T_51b61_row5_col1">2019</td>
+<td class="data row5 col2" id="T_51b61_row5_col2">2611324.000000</td>
 </tr>
 </tbody>
 </table>
@@ -14579,7 +14579,7 @@ Name: year, dtype: float64</pre>
     <span class="n">margins</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">margins_name</span><span class="o">=</span><span class="s1">'Total'</span>
 <span class="p">)</span>
 <span class="c1"># reorder columns by order in the year</span>
-<span class="n">pivot_table</span><span class="o">.</span><span class="n">insert</span><span class="p">(</span><span class="mi">5</span><span class="p">,</span> <span class="s2">"New Year's"</span><span class="p">,</span> <span class="n">pivot_table</span><span class="o">.</span><span class="n">pop</span><span class="p">(</span><span class="s2">"New Year's"</span><span class="p">)</span><span class="o">.</span><span class="n">tolist</span><span class="p">())</span>
+<span class="n">pivot_table</span><span class="o">.</span><span class="n">insert</span><span class="p">(</span><span class="mi">5</span><span class="p">,</span> <span class="s2">"New Year's"</span><span class="p">,</span> <span class="n">pivot_table</span><span class="o">.</span><span class="n">pop</span><span class="p">(</span><span class="s2">"New Year's"</span><span class="p">))</span>
 <span class="n">pivot_table</span>
 </pre></div>
 </div>
