--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -18366,11 +18366,11 @@ Name: year, dtype: float64</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput celltag_id_fin" data-mime-type="text/markdown">
-<h1 id="Thank-you!">Thank you!<a class="anchor-link" href="#Thank-you!">¶</a></h1><p><em>I hope you enjoyed the session. You can follow my work on the following platforms:</em></p>
+<h1 id="Thank-you!">Thank you!<a class="anchor-link" href="#Thank-you!">¶</a></h1><p><em>I hope you enjoyed the session. You can follow my work on these platforms:</em></p>
 <div style="display: flex; justify-content: space-between; align-items: center;">
 <div style="text-align: center; flex-basis: auto; flex-shrink: 2;">
-<img alt="No description has been provided for this image" class="qr-code" src="https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png" width="20%"/>
-</div>
+<img alt="Please visit https://stefaniemolin.com/feedback to provide your feedback on this session." class="qr-code" src="https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png" title="QR code to submit feedback (leads to https://stefaniemolin.com/feedback)" width="20%">
+</img></div>
 <div style="flex-basis: 45em; flex-grow: 2; font-size: 80%;">
 <div style="display: flex; justify-content: flex-start; align-items: center;">
 <i class="fa fa-globe fa-2x fa-fw" style="padding-right: 4px"></i>
