Replace bio abbreviations; make value_counts() examples consistent

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -7540,8 +7540,8 @@ main {
 <li>👩‍💻 Software engineer at Bloomberg in NYC</li>
 <li>🚀 Core developer of <a href="https://github.com/numpy/numpydoc">numpydoc</a></li>
 <li>✍️ Author of <a href="https://www.amazon.com/Hands-Data-Analysis-Pandas-visualization-dp-1800563450/dp/1800563450/">Hands-On Data Analysis with Pandas</a> (currently in its second edition; translated into Korean and Simplified Chinese)</li>
-<li>🎓 BS in operations research from Columbia University</li>
-<li>🎓 MS in computer science (ML specialization) from Georgia Tech</li>
+<li>🎓 Bachelor's in operations research from Columbia University</li>
+<li>🎓 Master's in computer science (ML specialization) from Georgia Tech</li>
 </ul>
 </div>
 </div>
@@ -9801,7 +9801,7 @@ Name: count, dtype: int64</pre>
 <div class="jp-InputPrompt jp-InputArea-prompt">In [25]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="cm-editor cm-s-jupyter">
-<div class="highlight hl-ipython3"><pre><span></span><span class="n">df</span><span class="o">.</span><span class="n">value_counts</span><span class="p">(</span><span class="n">subset</span><span class="o">=</span><span class="p">[</span><span class="s1">'nametype'</span><span class="p">,</span> <span class="s1">'fall'</span><span class="p">],</span> <span class="n">normalize</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+<div class="highlight hl-ipython3"><pre><span></span><span class="n">meteorites</span><span class="o">.</span><span class="n">value_counts</span><span class="p">(</span><span class="n">subset</span><span class="o">=</span><span class="p">[</span><span class="s1">'nametype'</span><span class="p">,</span> <span class="s1">'fall'</span><span class="p">],</span> <span class="n">normalize</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 </pre></div>
 </div>
 </div>
