Add canonical tag

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -36,6 +36,10 @@
 <meta content="3200" property="og:image:width"/>
 <meta content="1599" property="og:image:height"/>
 <title>Introduction to Data Analysis Using Pandas workshop slides | Stefanie Molin</title>
+<link
+  rel="canonical"
+  href="https://stefaniemolin.com/pandas-workshop/"
+/>
 <link href="/favicon/site.webmanifest" rel="manifest"/>
 <link href="/favicon/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
 <link href="/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
