Add link to feedback form on around QR code

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -18373,8 +18373,8 @@ Name: year, dtype: float64</pre>
 <h1 id="Thank-you!">Thank you!<a class="anchor-link" href="#Thank-you!">¶</a></h1><p><em>I hope you enjoyed the session. You can follow my work on these platforms:</em></p>
 <div style="display: flex; justify-content: space-between; align-items: center;">
 <div style="text-align: center; flex-basis: auto; flex-shrink: 2;">
-<img alt="Please visit https://stefaniemolin.com/feedback to provide your feedback on this session." class="qr-code" src="https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png" title="QR code to submit feedback (leads to https://stefaniemolin.com/feedback)" width="20%">
-</img></div>
+<a href="https://stefaniemolin.com/feedback" target="_blank"><img alt="Please visit https://stefaniemolin.com/feedback to provide your feedback on this session." class="qr-code" src="https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png" title="QR code to submit feedback (leads to https://stefaniemolin.com/feedback)" width="20%">
+</img></a></div>
 <div style="flex-basis: 45em; flex-grow: 2; font-size: 80%;">
 <div style="display: flex; justify-content: flex-start; align-items: center;">
 <i class="fa fa-globe fa-2x fa-fw" style="padding-right: 4px"></i>
