Add bluesky to thank you page

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -52,7 +52,7 @@
 <!-- Reveal Theme -->
 <link href="https://unpkg.com/reveal.js@4.0.2/dist/theme/simple.css" id="theme" rel="stylesheet"/>
 <!-- Font Awesome icons -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.1/css/all.min.css" rel="stylesheet" type="text/css"/>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet" type="text/css"/>
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
 <script>
 if( window.location.search.match( /print-pdf/gi ) ) {
@@ -18372,33 +18372,47 @@ Name: year, dtype: float64</pre>
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput celltag_id_fin" data-mime-type="text/markdown">
 <h1 id="Thank-you!">Thank you!<a class="anchor-link" href="#Thank-you!">¶</a></h1><p><em>I hope you enjoyed the session. You can follow my work on these platforms:</em></p>
 <div style="display: flex; justify-content: space-between; align-items: center;">
-<div style="text-align: center; flex-basis: auto; flex-shrink: 2;">
-<a href="https://stefaniemolin.com/feedback" target="_blank"><img alt="Please visit https://stefaniemolin.com/feedback to provide your feedback on this session." class="qr-code" src="https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png" title="QR code to submit feedback (leads to https://stefaniemolin.com/feedback)" width="20%">
-</img></a></div>
-<div style="flex-basis: 45em; flex-grow: 2; font-size: 80%;">
-<div style="display: flex; justify-content: flex-start; align-items: center;">
-<i class="fa fa-globe fa-2x fa-fw" style="padding-right: 4px"></i>
-<a href="https://stefaniemolin.com" rel="noopener noreferrer" style="font-size: 2em;">
-        stefaniemolin.com
-      </a>
-</div>
-<div style="display: flex; justify-content: flex-start; align-items: center;">
-<i class="fab fa-github fa-2x fa-fw" style="padding-right: 4px"></i>
-<a href="https://github.com/stefmolin" rel="noopener noreferrer" style="font-size: 2em;" target="_blank">
-      github.com/stefmolin
+  <div style="text-align: center; flex-basis: auto; flex-shrink: 2; margin-bottom: -25px">
+    <a href="https://stefaniemolin.com/feedback" target="_blank">
+      <img
+        width="20%"
+        alt="Please visit https://stefaniemolin.com/feedback to provide your feedback on this session."
+        title="QR code to submit feedback (leads to https://stefaniemolin.com/feedback)"
+        class="qr-code"
+        src="https://raw.githubusercontent.com/stefmolin/pandas-workshop/main/media/qr-code.png"
+      />
     </a>
-</div>
-<div style="display: flex; justify-content: flex-start; align-items: center;">
-<i class="fab fa-twitter fa-2x fa-fw" style="padding-right: 4px"></i>
-<a href="https://twitter.com/StefanieMolin" rel="noopener noreferrer" style="font-size: 2em;" target="_blank">
-      twitter.com/StefanieMolin
+  </div>
+<div style="flex-basis: 45em; flex-grow: 2; font-size: 75%;">
+  <div style="display: flex">
+    <i class="fa fa-globe fa-2x fa-fw" style="padding-right: 4px; margin: auto 0;"></i>
+    <a href="https://stefaniemolin.com" rel="noopener noreferrer" style="font-size: 2em;">
+      stefaniemolin.com
     </a>
+  </div>
+<div style="display: flex">
+  <i class="fab fa-github fa-2x fa-fw" style="padding-right: 4px; margin: auto 0;"></i>
+  <a href="https://github.com/stefmolin" rel="noopener noreferrer" style="font-size: 2em;" target="_blank">
+    github.com/stefmolin
+  </a>
 </div>
-<div style="display: flex; justify-content: flex-start; align-items: center;">
-<i class="fab fa-linkedin-in fa-2x fa-fw" style="padding-right: 4px"></i>
-<a href="https://linkedin.com/in/stefanie-molin" rel="noopener noreferrer" style="font-size: 2em;" target="_blank">
-      linkedin.com/in/stefanie-molin
-    </a>
+<div style="display: flex">
+  <i class="fa-brands fa-bluesky fa-2x fa-fw" style="padding-right: 4px; margin: auto 0;"></i>
+  <a href="https://bsky.app/profile/stefaniemolin.com" rel="noopener noreferrer" style="font-size: 2em;" target="_blank">
+    bsky.app/profile/stefaniemolin.com
+  </a>
+</div>
+<div style="display: flex">
+  <i class="fab fa-twitter fa-2x fa-fw" style="padding-right: 4px; margin: auto 0;"></i>
+  <a href="https://x.com/StefanieMolin" rel="noopener noreferrer" style="font-size: 2em;" target="_blank">
+    x.com/StefanieMolin
+  </a>
+</div>
+<div style="display: flex">
+  <i class="fab fa-linkedin-in fa-2x fa-fw" style="padding-right: 4px; margin: auto 0;"></i>
+  <a href="https://linkedin.com/in/stefanie-molin" rel="noopener noreferrer" style="font-size: 2em;" target="_blank">
+    linkedin.com/in/stefanie-molin
+  </a>
 </div>
 </div>
 </div>
